<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeepBLE</string>
    <string name="action_settings">Settings</string>
    <string name="view_devices">View\nDevices</string>
    <string name="view_information">View\nInformation</string>
    <string name="set_anchor">Set Device as Anchor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_device">Revert to Device</string>
    <string name="title_activity_context">ContextActivity</string>
    <string name="name">Name: </string>
    <string name="uuid">UUID: </string>
    <string name="current_anchor">Current Anchor: </string>
    <string name="save">Save</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="enter_name">Enter name</string>
    <string name="anchor_set">Set Anchor as Device</string>
    <string name="title_activity_anchor">AnchorActivity</string>
    <string name="title_activity_bluetooth_chat">BluetoothChat</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

</resources>
