<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingBottom="20dip" >
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="40sp"
        android:textColor="@color/off_white" />
    <Button
        android:id="@+id/set_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="32"
        android:layout_marginTop="20dip"
        android:text="@string/set_anchor"
        android:textSize="40sp"
        android:textColor="@color/off_white"
        
        android:onClick="" />
    

    <LinearLayout
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_devices"
            android:textSize="20sp"
            android:textColor="@color/off_white"
            
            android:onClick="" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_information"
            android:textSize="20sp"
            android:textColor="@color/off_white" 
            
            android:onClick="" />
        
    </LinearLayout>
</LinearLayout>