<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fadeScrollbars="false" >
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:padding="10dip" >
            <LinearLayout 
                android:orientation="horizontal" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textColor="@color/off_white" />
                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dip"
                    android:textSize="18sp"
                    android:textColor="@color/off_white" 
                    android:singleLine="true"
                    android:imeActionLabel="@string/save"
                    android:hint="@string/enter_name"/>
            </LinearLayout>
            <LinearLayout 
                android:orientation="horizontal" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_anchor"
                    android:textSize="18sp"
                    android:textColor="@color/off_white" />
                <TextView
                    android:id="@+id/user_anchor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dip"
                    android:textSize="18sp"
                    android:textColor="@color/off_white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="18sp"
        android:textColor="@color/off_white"
        android:onClick="onClickSave" />
</LinearLayout>

